--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+     <!---google fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto:wght@900&display=swap" 
+     rel="stylesheet">
+     <!----Font Awesome------>
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" 
+     integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
+     
+    <title>Electronics Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
